syntax = "proto3";

package pos;


option go_package="github.com/Andrewalifb/alpha-pos-system/sales-service";

import "google/protobuf/timestamp.proto";
import "alpha-pos-system/sales-service/api/proto/common.proto"; 

// PosOnlinePayment
message PosOnlinePayment {
  string payment_id = 1;
  string sale_id = 2;
  string employee_id = 3;
  google.protobuf.Timestamp payment_date = 4;
  double amount = 5;
  string payment_method = 6;
  string role_id = 7;
  string company_id = 8;
  google.protobuf.Timestamp created_at = 9;
  string created_by = 10;
  google.protobuf.Timestamp updated_at = 11;
  string updated_by = 12;
}

// Request and Response messages
message CreatePosOnlinePaymentRequest {
  PosOnlinePayment pos_online_payment = 1;
  JWTPayload jwt_payload = 2;
}

message CreatePosOnlinePaymentResponse {
  PosOnlinePayment pos_online_payment = 1;
}

message ReadPosOnlinePaymentRequest {
  string payment_id = 1;
  JWTPayload jwt_payload = 2;
}

message ReadPosOnlinePaymentResponse {
  PosOnlinePayment pos_online_payment = 1;
}

message UpdatePosOnlinePaymentRequest {
  PosOnlinePayment pos_online_payment = 1;
  JWTPayload jwt_payload = 2;
}

message UpdatePosOnlinePaymentResponse {
  PosOnlinePayment pos_online_payment = 1;
}

message DeletePosOnlinePaymentRequest {
  string payment_id = 1;
  JWTPayload jwt_payload = 2;
}

message DeletePosOnlinePaymentResponse {
  bool success = 1;
}

message ReadAllPosOnlinePaymentsRequest {
    JWTPayload jwt_payload = 1;
}

message ReadAllPosOnlinePaymentsResponse {
  repeated PosOnlinePayment pos_online_payments = 1;
}

// PosOnlinePaymentService
service PosOnlinePaymentService {
  rpc CreatePosOnlinePayment(CreatePosOnlinePaymentRequest) returns (CreatePosOnlinePaymentResponse);
  rpc ReadPosOnlinePayment(ReadPosOnlinePaymentRequest) returns (ReadPosOnlinePaymentResponse);
  rpc UpdatePosOnlinePayment(UpdatePosOnlinePaymentRequest) returns (UpdatePosOnlinePaymentResponse);
  rpc DeletePosOnlinePayment(DeletePosOnlinePaymentRequest) returns (DeletePosOnlinePaymentResponse);
  rpc ReadAllPosOnlinePayments(ReadAllPosOnlinePaymentsRequest) returns (ReadAllPosOnlinePaymentsResponse);
}
